# riscv-old-gcc

./: .gitignore  Makefile  Makefile.in  README  README.md  configure  configure.ac  gen-patches  native-host-linux.patch
binutils-2.21.1/: config.sub
binutils-2.21.1/bfd/: archures.c  bfd-in2.h  config.bfd  configure  configure.in  cpu-riscv.c  elf32-riscv.c  elf64-riscv.c  elfxx-riscv.c  elfxx-riscv.h  targets.c
binutils-2.21.1/binutils/: Makefile.am  Makefile.in  readelf.c
binutils-2.21.1/binutils/doc/: binutils.texi
binutils-2.21.1/gas/: Makefile.am  Makefile.in  configure.tgt
binutils-2.21.1/gas/config/: tc-riscv.c  tc-riscv.h
binutils-2.21.1/gas/doc/: c-arc.texi  c-arm.texi  c-cr16.texi  c-mips.texi  c-tic54x.texi
binutils-2.21.1/include/: dis-asm.h
binutils-2.21.1/include/elf/: common.h  riscv.h
binutils-2.21.1/include/opcode/: riscv-opc.h  riscv.h
binutils-2.21.1/ld/: Makefile.am  Makefile.in  configure.tgt  ld.texinfo
binutils-2.21.1/ld/emulparams/: elf32lriscv-defs.sh  elf32lriscv.sh  elf64lriscv-defs.sh  elf64lriscv.sh
binutils-2.21.1/ld/emultempl/: riscvelf.em
binutils-2.21.1/opcodes/: configure  configure.in  disassemble.c  riscv-dis.c  riscv-opc.c
gcc-4.6.1/gcc/: config.gcc  dse.c  expr.c  genmodes.c  machmode.h
gcc-4.6.1/gcc/cp/: cfns.gperf  cfns.h
gcc-4.6.1/gcc/doc/: invoke.texi
gcc-4.6.1/gcc/fortran/: gfortran.info
gcc-4.6.1/libgcc/: config.host
glibc-2.14.1/: configure  configure.in  shlib-versions
glibc-2.14.1/scripts/: config.sub
glibc-2.14.1/sysdeps/riscv/: Implies  Makefile  Versions  __longjmp.S  abort-instr.h  dl-dtprocnum.h  dl-machine.h  dl-tls.h  dl-trampoline.S  dl-trampoline.c  fpu_control.h  memcpy.c  memset.c  preconfigure  setjmp.S  strcmp.S  strcmp.c  tls-macros.h
glibc-2.14.1/sysdeps/riscv/elf/: configure  configure.in  start.S
gmp/: configfsf.sub
gmp/doc/: gmp.info
linux-2.6.37/include/: asm
linux-2.6.37/include/asm-example/: asm-offsets.h  byteorder.h  errno.h  ioctl.h  ioctls.h  param.h  pgtable.h  posix_types.h  processor.h  ptrace.h  socket.h  sockios.h  thread_info.h  types.h  unistd.h
linux-2.6.37/include/asm-frv/: atomic.h  pci.h  signal.h
linux-2.6.37/include/asm-generic/: atomic.h  bitops.h  byteorder.h  checksum.h  dma-mapping.h  dma.h  hardirq.h  io.h  kmap_types.h  mmu.h  msgbuf.h  mutex.h  pci.h  posix_types.h  sembuf.h  shmbuf.h  signal.h  socket.h  sockios.h  stat.h  (+7 more)
linux-headers/include/: ..install.cmd
mpc/: config.sub
mpc/doc/: mpc.info
mpfr/: config.sub  configure
mpfr/autom4te.cache/: output.0  requests  traces.0  traces.1
mpfr/doc/: mpfr.info
newlib-1.18.0/libgloss/: configure.in
newlib-1.18.0/newlib/: configure.host
(+182 files in other folders)
