GLIBC_PROVIDES dnl See aclocal.m4 in the top level source directory.
# Local configure fragment for sysdeps/riscv/elf.

if test "$usetls" != no; then
# Check for support of thread-local storage handling in assembler and
# linker.
AC_CACHE_CHECK(for RISC-V TLS support, libc_cv_riscv_tls, [dnl
cat > conftest.s <<\EOF
	.section ".tdata", "awT", %progbits
	.globl foo
foo:	.long	1
	.section ".tbss", "awT", %nobits
	.globl bar
bar:	.skip	4
	.text

	la		v0, __tls_get_addr
	la.tls.gd	a0, x
	jalr		v0
EOF
dnl
if AC_TRY_COMMAND(${CC-cc} -c $CFLAGS conftest.s 1>&AS_MESSAGE_LOG_FD); then
  libc_cv_riscv_tls=yes
else
  libc_cv_riscv_tls=no
fi
rm -f conftest*])
if test $libc_cv_riscv_tls = yes; then
  AC_DEFINE(HAVE_TLS_SUPPORT)
fi
fi

dnl Eventually we will support accessing static and hidden symbols
dnl with an AUIPC/ADDI pair, but this has yet to be implemented.
dnl AC_DEFINE(PI_STATIC_AND_HIDDEN)
